[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/MuzzleFlash.png" type="Texture" id=1]
[ext_resource path="res://Characters/Weapon.gd" type="Script" id=2]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 18, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 17, 0 )
texture = ExtResource( 1 )
